test/e2e/features/waypoint/testdata/common/test_namespace.yaml
# Namespace with ambient enabled
apiVersion: v1
kind: Namespace
metadata:
  name: waypoint-test-ns
  labels:
    istio.io/dataplane-mode: ambient
