test/e2e/features/waypoint/testdata/common/test_waypoint.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-waypoint
spec:
  gatewayClassName: kgateway-waypoint
  listeners:
  - name: proxy
    port: 15088
    protocol: istio.io/PROXY
